--- a/ringapp/templates/ringapp/commresults.html
+++ b/ringapp/templates/ringapp/commresults.html
@@ -12,7 +12,7 @@ These rings are consistent with your criteria, but may not be after more informa
 
     <ul>
     {% for item in main_results %}
-        <li><a href="//localhost:8000/ringapp/commrings/ring/{{ item.ring_id }}/">{{ item.name }}</a></li>
+        <li><a href="{% url 'cring' item.ring_id %}">{{ item.name }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
