--- a/ringapp/templates/ringapp/viewcommprop.html
+++ b/ringapp/templates/ringapp/viewcommprop.html
@@ -11,19 +11,19 @@ Rings without property: {{ lacksnum }}<br>
 These rings have this property:
     <ul>
     {% for item in has_rings %}
-        <li><a href="//localhost:8000/ringapp/commrings/ring/{{ item.ring_id }}/">{{ item.name }}</a></li>
+        <li><a href="{% url 'cring' item.ring_id %}">{{ item.name }}</a></li>
     {% endfor %}
     </ul>
 These rings lacks the property:
     <ul>
     {% for item in lacks_rings %}
-        <li><a href="//localhost:8000/ringapp/commrings/ring/{{ item.ring_id }}/">{{ item.name }}</a></li>
+        <li><a href="{% url 'cring' item.ring_id %}">{{ item.name }}</a></li>
     {% endfor %}
     </ul>
 We don't know if these rings have or lacks the property:
     <ul>
     {% for item in other_rings %}
-        <li><a href="//localhost:8000/ringapp/commrings/ring/{{ item.ring_id }}/">{{ item.name }}</a></li>
+        <li><a href="{% url 'cring' item.ring_id %}">{{ item.name }}</a></li>
     {% endfor %}
     </ul>
     
