I finally made the search form look nicer! Also tried to improve the wording on various pages.

--- a/ringapp/templates/ringapp/browseprops.html
+++ b/ringapp/templates/ringapp/browseprops.html
@@ -1,4 +1,6 @@
-You are now browsing ring properties that we track.
+Here is a list of all properties tracked for the ring database.<br>
+<br>
+(More properties specific to commutative rings appear in the <a href="{% url 'cproperties' %}">commutative ring property page.)</a>
 
 {% if prop_list %}
     <ul>
