--- a/ringapp/templates/ringapp/commresults.html
+++ b/ringapp/templates/ringapp/commresults.html
@@ -1,14 +1,22 @@
-Search results:<br>
-
-You searched for rings which ARE {{ has_string }},<br>
-but which ARE NOT {{ lacks_string }}<br>
+You searched for commmutative rings
+{% if has_string %}
+which ARE<br>
+{{ has_string }},<br>
+{% endif %}
+{% if lacks_string %}
+which ARE NOT<br>
+{{ lacks_string }}
+{% endif %}
+<br><br>
 
 {% if main_results %}
 {% if scope == 'n' %}
-These rings definitely satisfy your criteria:
+These commutative rings are known to satisfy all of your criteria:
 {% else %}
-These rings are consistent with your criteria, but may not be after more information is filled in
+These rings are consistent with your criteria, but may not satisfy your criteria when more data is supplied.
 {% endif %}
+<br>
+Search results:<br>
 
     <ul>
     {% for item in main_results %}
