--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -1,15 +1,17 @@
-Welcome to the ARC database!<br>
+Welcome to the Database of Ring Theory! (DaRT)<br>
 <br>
-Ring example database:
+Ring example database:<br>
+(This database focuses on rings that are not necessarily commutative and some properties they can have.)
 
-<li><a href="rings">Browse ring database</a></li>
-<li><a href="properties">Browse ring properties</a></li>
+<li><a href="rings">Browse all rings</a></li>
+<li><a href="properties">Browse all ring properties</a></li>
 <li><a href="search">Search rings</a></li>
 <br>
-Commutative ring example database:
+Commutative ring example database:<br>
+(This database exclusively carries commutative rings and has more specific properties compiled than the property list for all rings.)
 
-<li><a href="commrings">Browse commutative ring database</a></li>
-<li><a href="commproperties">Browse commutative ring properties</a></li>
+<li><a href="commrings">Browse the list of commutative rings</a></li>
+<li><a href="commproperties">Browse the list of commutative ring properties</a></li>
 <li><a href="commsearch">Search commutative rings</a></li>
 <br>
 Other stuff:
