Updated 'about' page, trying to work on logic pages.

--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -17,5 +17,6 @@ Commutative ring example database:<br>
 Other stuff:
 
 <li>FAQ</li>
-<li>Contact</li>
+<li><a href="about">Contact</a></li>
 <li><a href="about">About</a></li>
+
