Created pages for logic viewing and some educational pages. Preparing to make a place for the theorem table.

--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -6,6 +6,7 @@ Ring example database:<br>
 <li><a href="rings">Browse all rings</a></li>
 <li><a href="properties">Browse all ring properties</a></li>
 <li><a href="search">Search rings</a></li>
+<li><a href="logics">View the implications used in the database.</a></li>
 <br>
 Commutative ring example database:<br>
 (This database exclusively carries commutative rings and has more specific properties compiled than the property list for all rings.)
@@ -13,6 +14,12 @@ Commutative ring example database:<br>
 <li><a href="commrings">Browse the list of commutative rings</a></li>
 <li><a href="commproperties">Browse the list of commutative ring properties</a></li>
 <li><a href="commsearch">Search commutative rings</a></li>
+<li><a href="commlogics">View the implications used in the commutative ring database.</a></li>
+<br>
+Learn about ring theory:<br>
+<li><a href="people">Personalities in ring theory history</a></li>
+<li><a href="resources">Study material</a></li>
+
 <br>
 Other stuff:
 
