--- a/ringapp/templates/ringapp/logic.html
+++ b/ringapp/templates/ringapp/logic.html
@@ -3,5 +3,5 @@ This is a listing of the implications used by the database.
 <br><br>
 
 {% for item in things %}
- <li>{{item.ring.name}}</li>
+ <li>{{item.property.name}}</li>
 {% endfor %}
