Theorems page, suggestions pages.

--- a/ringapp/templates/ringapp/browsecommlogics.html
+++ b/ringapp/templates/ringapp/browsecommlogics.html
@@ -7,7 +7,7 @@ This is a listing of the implications used by the commutative ring database.
 {% if logics %}
     <ul>
     {% for item in logics %}
-        <li><a href="logic/{{ item.logic_id }}/">{{ item.readable }}</a>  </li>
+        <li><a href="commlogic/{{ item.logic_id }}/">{{ item.readable }}</a>  </li>
     {% endfor %}
     </ul>
 {% else %}
