--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -15,8 +15,15 @@ Commutative ring example database:<br>
 <li><a href="commproperties">Browse the list of commutative ring properties</a></li>
 <li><a href="commsearch">Search commutative rings</a></li>
 <li><a href="commlogics">View the implications used in the commutative ring database.</a></li>
+
+
+Get involved:<br>
+<li><a href="contribute">Contribute items or citations to the database.</a> (Don't worry, if you can't think of a ring or citation to contribute, you can get a random recommendation.)</li>
+<li>Help us on <a href="https://github.com/rschwiebert/RingApp">GitHub</a></li>
+
 <br>
 Learn about ring theory:<br>
+<li><a href="theorems">See theorems of ring theory</a></li>
 <li><a href="people">Personalities in ring theory history</a></li>
 <li><a href="resources">Study material</a></li>
 
