Added some HTML templating in preparation for better formatting later.

--- a/ringapp/templates/ringapp/browselogics.html
+++ b/ringapp/templates/ringapp/browselogics.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Ring implications</title>
+</head>
+<body>
+
 This is a listing of the implications used by the database.
 <br><br>
 <a href="{% url 'commlogics' %}">Switch to list of commutative ring implications</a>
@@ -16,3 +24,6 @@ This is a listing of the implications used by the database.
 
 <br>
 
+
+</body>
+</html>
