--- a/ringapp/templates/ringapp/browseprops.html
+++ b/ringapp/templates/ringapp/browseprops.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Ring properties</title>
+</head>
+<body>
+
 Here is a list of all properties tracked for the ring database.<br>
 <br>
 (More properties specific to commutative rings appear in the <a href="{% url 'cproperties' %}">commutative ring property page.)</a>
@@ -11,3 +19,8 @@ Here is a list of all properties tracked for the ring database.<br>
 {% else %}
     <p>No properties were retrieved.</p>
 {% endif %}
+
+
+
+</body>
+</html>
