--- a/ringapp/templates/ringapp/browserings.html
+++ b/ringapp/templates/ringapp/browserings.html
@@ -1,4 +1,12 @@
-You are now browsing rings we have on record. 
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Rings</title>
+</head>
+<body>
+
+You are now browsing rings we have on record.
 
 {% if ring_list %}
     <ul>
@@ -9,3 +17,8 @@ You are now browsing rings we have on record.
 {% else %}
     <p>No rings were retrieved.</p>
 {% endif %}
+
+
+
+</body>
+</html>
