--- a/ringapp/templates/ringapp/commresults.html
+++ b/ringapp/templates/ringapp/commresults.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Commutative search results</title>
+</head>
+<body>
+
 You searched for commmutative rings
 {% if has_string %}
 which ARE<br>
@@ -28,3 +36,6 @@ Search results:<br>
 {% endif %}
 <br>
 
+
+</body>
+</html>
