--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Contribute</title>
+</head>
+<body>
+
 The database is always growing, and is always in need of more content, especially ring examples and citations for specific claims.<br>
 <br>
 To help maintain the quality of content and integrity of the database, please keep these points in mind:
@@ -18,3 +26,7 @@ To help maintain the quality of content and integrity of the database, please ke
     </div>
     <p><input type="submit" value="Select" /></p>
 </form>
+
+
+</body>
+</html>
