--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -27,6 +27,7 @@ Learn about ring theory:<br>
 <li><a href="theorems">See theorems of ring theory</a></li>
 <li><a href="people">Personalities in ring theory history</a></li>
 <li><a href="resources">Study material</a></li>
+<li><a href="bibliography">Bibliography</a>: our list of cited works.</li>
 
 <br>
 Other stuff:
