--- a/ringapp/templates/ringapp/resources.html
+++ b/ringapp/templates/ringapp/resources.html
@@ -1,4 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Resources</title>
+</head>
+<body>
+
 Learn about ring theory:
 <br>
 <br>
 Under construction.
+
+
+
+</body>
+</html>
