--- a/ringapp/templates/ringapp/suggestions.html
+++ b/ringapp/templates/ringapp/suggestions.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Suggestions</title>
+</head>
+<body>
+
 {% if option == "ring" %}
 SUGGEST A RING:<br>
 (Sorry, still working on the submission form.)
@@ -36,3 +44,7 @@ Something is wrong.
 
 
 
+
+
+</body>
+</html>
