--- a/ringapp/templates/ringapp/viewring.html
+++ b/ringapp/templates/ringapp/viewring.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Ring detail</title>
+</head>
+<body>
+
 Ring detail page
 
 {% if r %}
@@ -29,3 +37,9 @@ We don't know if the ring has or lacks the following properties:
 {% else %}
     <p>Nothing was retrieved.</p>
 {% endif %}
+
+
+
+
+</body>
+</html>
