--- a/ringapp/templates/ringapp/browsecommlogics.html
+++ b/ringapp/templates/ringapp/browsecommlogics.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Commutative ring implications</title>
+</head>
+<body>
+
 This is a listing of the implications used by the commutative ring database.
 
 <br><br>
@@ -13,3 +21,8 @@ This is a listing of the implications used by the commutative ring database.
 {% else %}
     <p>No implications were retrieved.</p>
 {% endif %}
+
+
+
+</body>
+</html>
