--- a/ringapp/templates/ringapp/browsecommprops.html
+++ b/ringapp/templates/ringapp/browsecommprops.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Commutative properties</title>
+</head>
+<body>
+
 You are now browsing commutative ring properties that we track.
 
 {% if prop_list %}
@@ -9,3 +17,8 @@ You are now browsing commutative ring properties that we track.
 {% else %}
     <p>No properties were retrieved.</p>
 {% endif %}
+
+
+
+</body>
+</html>
