--- a/ringapp/templates/ringapp/browsetheorems.html
+++ b/ringapp/templates/ringapp/browsetheorems.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Ring theory theorems</title>
+</head>
+<body>
+
 You are now browsing theorems we have on record. 
 
 {% if theorem_list %}
@@ -9,3 +17,7 @@ You are now browsing theorems we have on record.
 {% else %}
     <p>No theorems were retrieved.</p>
 {% endif %}
+
+
+</body>
+</html>
