--- a/ringapp/templates/ringapp/logic.html
+++ b/ringapp/templates/ringapp/logic.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Implications</title>
+</head>
+<body>
+
 This is a listing of the implications used by the database.
 
 <br><br>
@@ -5,3 +13,7 @@ This is a listing of the implications used by the database.
 {% for item in things %}
  <li>{{item.property.name}}</li>
 {% endfor %}
+
+
+</body>
+</html>
