--- a/ringapp/templates/ringapp/people.html
+++ b/ringapp/templates/ringapp/people.html
@@ -1,4 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>People</title>
+</head>
+<body>
+
 Personalities in the history of ring theory:
 <br>
 <br>
 Under construction.
+
+
+</body>
+</html>
