--- a/ringapp/templates/ringapp/results.html
+++ b/ringapp/templates/ringapp/results.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Search results</title>
+</head>
+<body>
+
 You searched for rings
 {% if has_string %}
 which ARE<br>
@@ -45,3 +53,9 @@ These rings are consistent with the mirror version of your criteria, but may not
 {% else %}
     <p>The mirror search turned up no rings.</p>
 {% endif %}
+
+
+
+
+</body>
+</html>
