--- a/ringapp/templates/ringapp/search.html
+++ b/ringapp/templates/ringapp/search.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Search for rings</title>
+</head>
+<body>
+
 Search the full database of rings<br><br>
 The complied data is, naturally, incomplete. The status of a property for a given ring can be in three states: "has property," "doesn't have the property," and "unknown." Choosing narrow scope ensures that the results are known to match all inputs. Choosing wide scope excludes all rings that do not fit all inputs. So, there may be rings in wide scope results that aren't in narrow scope results, simply because the properties in question may have "unknown" status.<br>
 <br>
@@ -42,3 +50,7 @@ The complied data is, naturally, incomplete. The status of a property for a give
     <p><input type="submit" value="Search" /></p>
 </form>
 
+
+
+</body>
+</html>
