--- a/ringapp/templates/ringapp/viewcommlogic.html
+++ b/ringapp/templates/ringapp/viewcommlogic.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Commutative implication detail</title>
+</head>
+<body>
+
 Commutative logic detail page
 
 {% if L %}
@@ -10,3 +18,7 @@ Commutative logic detail page
 {% else %}
     <p>Nothing was retrieved.</p>
 {% endif %}
+
+
+</body>
+</html>
