--- a/ringapp/templates/ringapp/viewlogic.html
+++ b/ringapp/templates/ringapp/viewlogic.html
@@ -1,4 +1,12 @@
-Logic detail page
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Implication detail page</title>
+</head>
+<body>
+
+Detail for database logic.
 
 {% if L %}
     <ul>
@@ -10,3 +18,8 @@ Logic detail page
 {% else %}
     <p>Nothing was retrieved.</p>
 {% endif %}
+
+
+
+</body>
+</html>
