--- a/ringapp/templates/ringapp/viewprop.html
+++ b/ringapp/templates/ringapp/viewprop.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Ring property detail</title>
+</head>
+<body>
+
 Property detail page.
 
 {% if property_id %}
@@ -40,3 +48,9 @@ We don't know if these rings have or lack the property:
 {% else %}
     <p>Nothing was retrieved.</p>
 {% endif %}
+
+
+
+
+</body>
+</html>
