--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <meta name="google-site-verification" content="pu9Z0hUTJz2dQW9bBTzX1KIiqXrlxF8XvJbVJJLPKHE" />
+    <title>Database of Ring Theory</title>
+</head>
+<body>
+
 Welcome to the Database of Ring Theory! (DaRT)<br>
 <br>
 Ring example database:<br>
