Learned how to use template inheritance to add copyright footer.

--- a/ringapp/templates/ringapp/about.html
+++ b/ringapp/templates/ringapp/about.html
@@ -1,35 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>About DaRT</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
 
-CONTACT:<br>
-<br>
+{% block title %}About{% endblock %}
+
+{% block body_block %}
+
+<h1>About</h1>
+
+<h2>Contact:</h2>
+
 This application <a href="https://github.com/rschwiebert/RingApp">is on GitHub!</a> If you'd like to help
 make this site better, please drop me a line there inquiring about how to
-contribute.<br>
-<br><br>
-Special thanks:<br>
-<br>
-I started development of this project in mid 2013 after finding out about Austin Mohr's site on topological spaces
-(then called "Spacebook," now reincarnated as <a href="http://topology.jdabbs.com/">Pi-Base</a>). Thanks to Austin's
+contribute.
+
+<h2>Special thanks:</h2>
+I started development of this project in mid 2013 after finding out about <b>Austin Mohr</b>'s site on topological spaces
+(then called "Spacebook," now reincarnated as <a href="http://topology.jdabbs.com/">π-Base</a>). Thanks to Austin's
 helpful advice (and a bit of a peek under the hood of the site) I began
 dreaming of a site for rings that could track ring examples, their properties,
 and have some logic on the back end to fill things out. The next major round
-of thanks goes to Derik Rhodes, who set me up with a development environment
+of thanks goes to <b>Derik Rhodes</b>, who set me up with a development environment
 and sketch database in late 2013. I went on developing locally for a year while
 I mustered the energy to learn about how and where I could make the page live.
-This finally happened when I learned about James Dabbs' work with Austin
-developing Pi-Base. Thanks to James' generous advice and encouragement,
+This finally happened when I learned about <b>James Dabbs'</b> work with Austin
+developing π-Base. Thanks to James' generous advice and encouragement,
 this Database of Ring Theory is now finally able to make its debut on Heroku.
-Thanks again for helping make this site a reality!<br>
---Ryan C. Schwiebert, December 2014
-<br>
+Thanks again for helping make this site a reality! --Ryan C. Schwiebert, December 2014
 
-
-
-</body>
-</html>
+{% endblock %}
