--- a/ringapp/templates/ringapp/commsearch.html
+++ b/ringapp/templates/ringapp/commsearch.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Commutative ring search</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
+
+{% block title %}Commutative ring search{% endblock %}
+
+{% block body_block %}
+
+<h1>Commutative ring search</h1>
 
 Search the database of commutative rings<br><br>
 The complied data is, naturally, incomplete. The status of a property for a given ring can be in three states: "has property," "doesn't have the property," and "unknown." Choosing narrow scope ensures that the results are known to match all inputs. Choosing wide scope excludes all rings that do not fit all inputs. So, there may be rings in wide scope results that aren't in narrow scope results, simply because the properties in question may have "unknown" status.<br>
@@ -50,6 +50,4 @@ The complied data is, naturally, incomplete. The status of a property for a give
     <p><input type="submit" value="Search" /></p>
 </form>
 
-
-</body>
-</html>
+{% endblock %}
