--- a/ringapp/templates/ringapp/people.html
+++ b/ringapp/templates/ringapp/people.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>People</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
 
-Personalities in the history of ring theory:
-<br>
-<br>
+{% block title %}People{% endblock %}
+
+{% block body_block %}
+
+<h1>Personalities in the history of ring theory</h1>
+
+
 Under construction.
 
-
-</body>
-</html>
+{% endblock %}
