--- a/ringapp/templates/ringapp/resources.html
+++ b/ringapp/templates/ringapp/resources.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Resources</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
 
-Learn about ring theory:
+{% block title %}Resources{% endblock %}
+
+{% block body_block %}
+
+<h1>Learn about ring theory</h1>
+
 <br>
 <br>
 Under construction.
 
-
-
-</body>
-</html>
+{% endblock %}
