--- a/ringapp/templates/ringapp/bibliography.html
+++ b/ringapp/templates/ringapp/bibliography.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Bibilography</title>
-</head>
-<body>
-Works referenced:
+{% extends 'ringapp/base.html' %}
+
+{% block title %}Bibliography{% endblock %}
+
+{% block body_block %}
+
+<h1>Works referenced</h1>
+
 {% for ref in bibliography %}
-<ul>
-    <li>{{ ref }}</li>
-</ul>
+    <ul>
+        <li>{{ ref }}</li>
+    </ul>
 {% endfor %}
 
-
-</body>
-</html>
+{% endblock %}
