--- a/ringapp/templates/ringapp/browsecommlogics.html
+++ b/ringapp/templates/ringapp/browsecommlogics.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Commutative ring implications</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
+
+{% block title %}Commutative ring implications{% endblock %}
+
+{% block body_block %}
+
+<h1>Commutative ring implications</h1>
 
 This is a listing of the implications used by the commutative ring database.
 
@@ -22,7 +22,4 @@ This is a listing of the implications used by the commutative ring database.
     <p>No implications were retrieved.</p>
 {% endif %}
 
-
-
-</body>
-</html>
+{% endblock %}
