--- a/ringapp/templates/ringapp/browsecommprops.html
+++ b/ringapp/templates/ringapp/browsecommprops.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Commutative properties</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
+
+{% block title %}Commutative ring properties{% endblock %}
+
+{% block body_block %}
+
+<h1>Commutative ring properties</h1>
 
 You are now browsing commutative ring properties that we track.
 
@@ -18,7 +18,4 @@ You are now browsing commutative ring properties that we track.
     <p>No properties were retrieved.</p>
 {% endif %}
 
-
-
-</body>
-</html>
+{% endblock %}
