--- a/ringapp/templates/ringapp/browsecommrings.html
+++ b/ringapp/templates/ringapp/browsecommrings.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Commutative rings</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
+
+{% block title %}Commutative rings{% endblock %}
+
+{% block body_block %}
+
+<h1>Commutative rings</h1>
 
 You are now browsing commutative rings we have on record.
 
@@ -18,7 +18,4 @@ You are now browsing commutative rings we have on record.
     <p>No rings were retrieved.</p>
 {% endif %}
 
-
-
-</body>
-</html>
+{% endblock %}
