--- a/ringapp/templates/ringapp/browselogics.html
+++ b/ringapp/templates/ringapp/browselogics.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Ring implications</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
+
+{% block title %}Ring implications{% endblock %}
+
+{% block body_block %}
+
+<h1>Ring implications</h1>
 
 This is a listing of the implications used by the database.
 <br><br>
@@ -22,8 +22,4 @@ This is a listing of the implications used by the database.
     <p>No implications were retrieved.</p>
 {% endif %}
 
-<br>
-
-
-</body>
-</html>
+{% endblock %}
