--- a/ringapp/templates/ringapp/commresults.html
+++ b/ringapp/templates/ringapp/commresults.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Commutative search results</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
+
+{% block title %}Commutative ring search results{% endblock %}
+
+{% block body_block %}
+
+<h1>Commutative ring search results</h1>
 
 You searched for commmutative rings
 {% if has_string %}
@@ -34,8 +34,5 @@ Search results:<br>
 {% else %}
     <p>The search turned up no rings.</p>
 {% endif %}
-<br>
 
-
-</body>
-</html>
+{% endblock %}
