--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Contribute</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
 
+{% block title %}Contribute{% endblock %}
+
+{% block body_block %}
+    <h1>Contribute</h1>
 The database is always growing, and is always in need of more content, especially ring examples and citations for specific claims.<br>
 <br>
 To help maintain the quality of content and integrity of the database, please keep these points in mind:
@@ -27,6 +25,4 @@ To help maintain the quality of content and integrity of the database, please ke
     <p><input type="submit" value="Select" /></p>
 </form>
 
-
-</body>
-</html>
+{% endblock %}
