--- a/ringapp/templates/ringapp/logic.html
+++ b/ringapp/templates/ringapp/logic.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Implications</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
+
+{% block title %}Ring implications{% endblock %}
+
+{% block body_block %}
+
+<h1>Ring implications</h1>
 
 This is a listing of the implications used by the database.
 
@@ -14,6 +14,4 @@ This is a listing of the implications used by the database.
  <li>{{item.property.name}}</li>
 {% endfor %}
 
-
-</body>
-</html>
+{% endblock %}
