--- a/ringapp/templates/ringapp/viewcommprop.html
+++ b/ringapp/templates/ringapp/viewcommprop.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Commutative ring property detail</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
 
-Commutative ring property page.
+{% block title %}Commutative ring property detail{% endblock %}
+
+{% block body_block %}
+
+<h1>Commutative ring property detail</h1>
 
 {% if property_id %}
     <ul>
@@ -39,7 +37,4 @@ We don't know if these rings have or lacks the property:
     <p>Nothing was retrieved.</p>
 {% endif %}
 
-
-
-</body>
-</html>
+{% endblock %}
