--- a/ringapp/templates/ringapp/viewlogic.html
+++ b/ringapp/templates/ringapp/viewlogic.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Implication detail page</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
 
-Detail for database logic.
+{% block title %}Ring implication detail{% endblock %}
+
+{% block body_block %}
+
+<h1>Ring implication detail</h1>
 
 {% if L %}
     <ul>
@@ -19,7 +17,4 @@ Detail for database logic.
     <p>Nothing was retrieved.</p>
 {% endif %}
 
-
-
-</body>
-</html>
+{% endblock %}
