--- a/ringapp/templates/ringapp/viewring.html
+++ b/ringapp/templates/ringapp/viewring.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Ring detail</title>
-</head>
-<body>
+{% extends 'ringapp/base.html' %}
 
-Ring detail page
+{% block title %}Ring detail{% endblock %}
+
+{% block body_block %}
+
+<h1>Ring detail</h1>
 
 {% if r %}
     <ul>
@@ -38,8 +36,4 @@ We don't know if the ring has or lacks the following properties:
     <p>Nothing was retrieved.</p>
 {% endif %}
 
-
-
-
-</body>
-</html>
+{% endblock %}
