Added high quality links to related sites. Spelled out the site's mission clearly.

--- a/ringapp/templates/ringapp/about.html
+++ b/ringapp/templates/ringapp/about.html
@@ -4,15 +4,39 @@
 
 {% block body_block %}
 
-<h1>About</h1>
+<h1>About DaRT</h1>
 
-<h2>Contact:</h2>
+<h2 name="mission">Our mission</h2>
+<p>In any discipline, examples are indispensable tools. They teach us the limits
+of our knowledge by showing us what is possible, and they can often illuminate the differences between concepts.</p>
+<p>Here is the problem: In the past, students and researchers would incrementally accumulate a stockpile of examples
+    over a lifetime. Quite often each example is remembered with a specific purpose, and other properties are perhaps
+    unobserved. Faster access to examples was made possible by books like Steen and Seebach's
+    <a href="http://www.amazon.com/Counterexamples-Topology-Dover-Books-Mathematics/dp/048668735X">
+        <i>Counterexamples in topology</i></a>, but still, retrieval is limited a bit by manual use of the book.
+
+<p>The DaRT, leveraging the power of software, can do much more. Not only can we maintain an ever-growing store
+    of examples, we can also <u>efficiently explore them,</u> and we can
+    <u>automate the process of "completing the picture"</u> for each example. We can also smoothly track multiple
+    citations for items in a way that books would have a hard time doing. In all, DaRT can provide a more complete,
+    more easily searchable, and a better referenced package than a book.</p>
+
+<p>For convenience, you can explore the set of examples in two ways. You can explore the full database, or if you are
+    only interested in commutative rings and their properties, you can search the database through the lens of the
+    commutative version of browsing and searching. So if you don't see a property of commutative rings in the full
+    database, check the specialized commutative ring version: you will probably find it there.</p>
+
+<p>In addition to rings and their properties, you can also find theorems of ring theory, many of which are fuel for
+    the automated deduction scripts.</p>
+
+<p>Check the FAQ if you have questions, and have fun exploring the data!</p>
+
+<h2 name="contact">Contact</h2>
 
 This application <a href="https://github.com/rschwiebert/RingApp">is on GitHub!</a> If you'd like to help
-make this site better, please drop me a line there inquiring about how to
-contribute.
+make this site better, please drop me a line there inquiring about how to contribute.
 
-<h2>Special thanks:</h2>
+<h2>Special thanks</h2>
 I started development of this project in mid 2013 after finding out about <b>Austin Mohr</b>'s site on topological spaces
 (then called "Spacebook," now reincarnated as <a href="http://topology.jdabbs.com/">π-Base</a>). Thanks to Austin's
 helpful advice (and a bit of a peek under the hood of the site) I began
