--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -4,41 +4,48 @@
 
 {% block body_block %}
 
-<h1>Welcome to the Database of Ring Theory!</h1>
-<br>
-Ring example database:<br>
-(This database focuses on rings that are not necessarily commutative and some properties they can have.)
+<h1 align="center">Welcome to the Database of Ring Theory!</h1>
+<p align="center">A repository of rings, their properties, and more ring theory stuff</p>
 
-<li><a href="rings">Browse all rings</a></li>
-<li><a href="properties">Browse all ring properties</a></li>
-<li><a href="search">Search rings</a></li>
-<li><a href="logics">View the implications used in the database.</a></li>
-<br>
-Commutative ring example database:<br>
-(This database exclusively carries commutative rings and has more specific properties compiled than the property list for all rings.)
+<hr/>
 
-<li><a href="commrings">Browse the list of commutative rings</a></li>
-<li><a href="commproperties">Browse the list of commutative ring properties</a></li>
-<li><a href="commsearch">Search commutative rings</a></li>
-<li><a href="commlogics">View the implications used in the commutative ring database.</a></li>
+<h2>New to the site?</h2>
+<p><a href="about#mission">Here is all you need to know.</a></p>
+
+<h2>Full ring database</h2>
+(This database includes rings that are not necessarily commutative and properties that apply to them.)
+
+<li>Browse: <a href="rings">rings</a> | <a href="properties">properties</a> | <a href="theorems">theorems</a></li>
+<li>Search: <a href="search">rings</a> | properties | theorems</li>
+
+<h2>Specialized commutative ring database</h2>
+(This database exclusively carries commutative rings and has more specific properties that apply only to commutative
+    rings.)
+<li>Browse: <a href="commrings">rings</a> | <a href="commproperties">properties</a> | <a href="theorems">theorems</a></li>
+<li>Search: <a href="commsearch">rings</a> | properties | theorems</li>
 
 
-<br>
-Get involved:<br>
-<li><a href="contribute">Contribute items or citations to the database.</a> (Don't worry, if you can't think of a ring or citation to contribute, you can get a random recommendation.)</li>
+<h2>Get involved</h2>
+<li><a href="contribute">Contribute items or citations to the database</a> (Don't worry, if you can't think of a ring
+    or citation to contribute, you can get a random recommendation.)</li>
 <li>Help us on <a href="https://github.com/rschwiebert/RingApp">GitHub</a></li>
 
-<br>
-Learn about ring theory:<br>
-<li><a href="theorems">See theorems of ring theory</a></li>
-<li><a href="people">Personalities in ring theory history</a></li>
-<li><a href="resources">Study material</a></li>
-<li><a href="bibliography">Bibliography</a>: our list of cited works.</li>
 
-<br>
-Other stuff:
+<h2>Learn about ring theory</h2>
 
-<li>FAQ</li>
-<li><a href="about">Contact</a></li>
-<li><a href="about">About</a></li>
+<li><a href="resources">Online resources for the subject, its history, and some of its contributors</a></li>
+<li><a href="bibliography">Bibliography</a>: our list of cited works</li>
+
+<h2>You might also like</h2>
+<li><a href="http://topology.jdabbs.com/">π-Base</a>: A community database of topological examples with
+    automated deduction and powerful search</li>
+<li><a href="http://grdb.lboro.ac.uk/">Graded Ring Database</a>: A database of graded rings in algebraic geometry</li>
+<li><a href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and its
+    Applications</a> at Ohio University</li>
+<li><a href="http://stacks.math.columbia.edu/">The Stacks Project</a>: an open source textbook and reference work on
+    algebraic stacks and the algebraic geometry needed to define them</li>
+<li><a href="http://ncatlab.org/nlab/show/HomePage">nLab</a>: a wiki-lab for collaborative work on Mathematics,
+    Physics and Philosophy </li>
+
+
 {% endblock %}
