--- a/ringapp/templates/ringapp/resources.html
+++ b/ringapp/templates/ringapp/resources.html
@@ -6,8 +6,28 @@
 
 <h1>Learn about ring theory</h1>
 
-<br>
-<br>
-Under construction.
+<h2>Study material</h2>
+
+<li><a href="http://ncatlab.org/nlab/show/ring">Explanation of rings</a> at nLab</li>
+<li><a href="https://en.wikipedia.org/wiki/Ring_(mathematics)">Explanation of rings</a> at Wikipedia</li>
+<li><a href="https://en.wikipedia.org/wiki/Category:Ring_theory">The list of ring theory topics</a> at Wikipedia</li>
+<li><a href="http://stacks.math.columbia.edu/chapter/10">The chapter on commutative rings</a> at the Stacks Project</li>
+<li><a href="http://math.stackexchange.com/questions/tagged/ring-theory">The archive of ring theory questions</a> at
+    math.stackexchange</li>
+
+<h2>History</h2>
+<li><a href="https://en.wikipedia.org/wiki/Ring_theory#History">History of ring theory</a> wiki</li>
+<li><a href="http://www-history.mcs.st-and.ac.uk/HistTopics/Ring_theory.html"> The development of ring theory</a> at
+    MacTutor</li>
+<li><a href="http://math.stackexchange.com/q/362/29335">History of the concept of a ring</a> at math.stackexchange.com</li>
+
+<h2>People</h2>
+<li><a href="https://en.wikipedia.org/wiki/Emil_Artin">Emil Artin</a></li>
+<li><a href="https://en.wikipedia.org/wiki/William_Rowan_Hamilton">William Rowan Hamilton</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Nathan_Jacobson">Nathan Jacobson</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Irving_Kaplansky">Irving Kaplansky</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Emmy_Noether">Emmy Noether</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Joseph_Wedderburn">Joseph Wedderburn</a></li>
+
 
 {% endblock %}
